# profile.mobile.platform.core.uifw.e-tizen-data

./: configure.ac
aarch64/config/: Makefile.am
aarch64/config/tizen-mobile/: Makefile.am
arm/config/: Makefile.am
arm/config/tizen-mobile/: Makefile.am
data/units/: display-manager-run.service  enlightenment
default/: tizen_key_layout.txt
default/config/: Makefile.am  profile.src
default/config/tizen-mobile/: Makefile.am  e.src.in  e_comp.src.in  make_keymap_conf.sh  module.gesture.src  module.keyrouter.src  module.policy-tizen.src
default/wayland/: enlightenment  enlightenment.sh
emulator/config/: Makefile.am
emulator/config/tizen-mobile/: Makefile.am
i386/config/: Makefile.am
i386/config/tizen-mobile/: Makefile.am
keylayout/: tizen_key_layout.txt
packaging/: e-tizen-data.spec
x86_64/config/: Makefile.am
x86_64/config/tizen-mobile/: Makefile.am
